# snowman

./: .gitignore  CMakeLists.txt  drawFunc.c  drawFunc.h  guess.c  guess.h  main.c  randomWord.c  randomWord.h  titleScreen.c  titleScreen.h  words.txt
